# metadata_collector

./: .gitignore  document_dataset.py  logging_config.json  metadata_system_design.md  pyproject.toml
metadata/: .gitignore  access.py  capture.py  connection.py  run_migrations.py  search.py  vimput.py
metadata/migration_drafts/: phase_two.sql
tests/: test_capture.py
